# databricks-infra

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DataEngineer-readme.md  DataPlatformEngineer-readme.md  README.md  locals.tf  main.tf  outputs.tf  pyproject.toml  users.json  versions.tf
.github/workflows/: deploy.yml
course/: SETUP_GUIDE.MD
course/notebooks/01_week/: 00_databricks_fundamentals.py  01_unity_catalog_deep_dive.py
course/notebooks/02_week/: 02_data_ingestion.py
course/notebooks/0x_week/: 02_cluster_management.py  03_spark_on_databricks.py
guides/: SETUP.md
templates/: hello-world.py
terraform/: README.md  catalogs.tf  groups.tf  locals.tf  main.tf  outputs.tf  users.json  variables.tf
